--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   permission_handler: ^10.0.0
   path: ^1.8.1
   provider: ^6.0.3
+  video_thumbnail: ^0.5.2
 
 dev_dependencies:
   flutter_test:
