--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,10 @@ dependencies:
   provider: ^6.0.3
   video_thumbnail: ^0.5.2
   fluttertoast: ^8.0.9
+  carousel_slider: ^4.1.1
+  flutter_speed_dial: ^6.0.0
+  share_plus: ^4.0.10+1
+  video_player: ^2.4.7
 
 dev_dependencies:
   flutter_test:
