--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   flutter_speed_dial: ^6.0.0
   share_plus: ^4.0.10+1
   video_player: ^2.4.7
+  google_mobile_ads: ^2.0.1
 
 dev_dependencies:
   flutter_test:
